# locust-test-openapi

./: .gitignore  README.md  example-openapi.yaml  pyproject.toml
.agent/workflows/: run-load-test.md
backend/: main.py
backend/app/services/: openapi.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  FakerGuide.jsx  LocustGuide.jsx  UsageGuide.jsx  index.css
templates/: locustfile.j2
